--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,20 @@
     <string name="label_email_note">Account holder only</string>
     <string name="label_patient_first_name">Patient first name</string>
     <string name="label_patient_last_name">Patient last name</string>
+    <string name="label_fields_required">All fields requ</string>
+    <string name="label_dont_have_account">Dont have account?</string>
+    <string name="label_create_account">Create an account</string>
+
+
+    <!-- Start Reset Password strings -->
+    <string name="label_create_new_password">Create a new password</string>
+    <string name="label_new_password">New password</string>
+    <string name="label_new_password_helper_text">Must be 10–25 characters long, include an uppercase letter, lowercase letter, number</string>
+    <string name="label_confirm_password">Confirm new password</string>
+    <string name="label_save_password">Save password</string>
+    <string name="label_password_match_error">Passwords need to match</string>
+    <string name="label_password_error">Invalid password</string>
+    <string name="label_confirm_password_helper_text">Passwords must match</string>
+    <!-- End Reset Password strings -->
+
 </resources>
